# gorse

./: CMakeLists.txt
app/: CMakeLists.txt
app/acacia/: AcaciaScene.cpp  AcaciaScene.h  AssetPalette.cpp  AssetPalette.h  AttribEditor.cpp  AttribEditor.h  CMakeLists.txt  GLWidget.cpp  GLWidget.h  PiecesList.cpp  PiecesList.h  acacia.qrc  main.cpp  mainwindow.cpp  mainwindow.h
app/acacia/mimes/: assettree.json
app/acacia/ops/: AllOps.h  BranchTest.cpp  BranchTest.h  DrawableOps.cpp  DrawableOps.h  EdgeCollapseTest.cpp  EdgeCollapseTest.h  GeodesicDistanceTest.cpp  GeodesicDistanceTest.h  GranulateReduce.cpp  GranulateReduce.h  InstancedTest.cpp  InstancedTest.h  LeafTest.cpp  LeafTest.h  LodMeshIn.cpp  LodMeshIn.h  LodMeshInOps.cpp  LodMeshInOps.h  LodMeshOps.cpp  LodMeshOps.h  MeshFusionTest.cpp  MeshFusionTest.h  MeshListener.cpp  MeshListener.h  MeshListenerOps.cpp  MeshListenerOps.h  MorphologyOps.cpp  MorphologyOps.h  PVSTest.cpp  PVSTest.h  PosSample.h  RootOps.cpp  RootOps.h  SimpleMeshOps.cpp  SimpleMeshOps.h  SphereOps.cpp  SphereOps.h  SsdfTest.cpp  SsdfTest.h  (+2 more)
app/acacia/widgets/: treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
app/btreet/: CMakeLists.txt  main.cpp
app/bvht/: CMakeLists.txt  main.cpp
app/clientipc/: CMakeLists.txt  main.cpp
app/echm/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp
app/envt/: CMakeLists.txt  EnvironScene.cpp  EnvironScene.h  IblRenderer.cpp  IblRenderer.h  ImgDlg.cpp  ImgDlg.h  ImgWidget.cpp  ImgWidget.h  RenderWidget.cpp  RenderWidget.h  SampleDlg.cpp  SampleDlg.h  SampleWidget.cpp  SampleWidget.h  main.cpp  window.cpp  window.h
app/fdlgt/: CMakeLists.txt  fdlgt.qrc  main.cpp  mainwindow.cpp  mainwindow.h
app/frntm/: CMakeLists.txt  glprog.cpp  glprog.h  glwidget.cpp  main.cpp  tube.cpp  tube.h
app/hostipc/: CMakeLists.txt  main.cpp
app/instd/: CMakeLists.txt  glprog.cpp  glprog.h  glwidget.h  instdwidget.cpp  instdwidget.h  main.cpp  window.cpp  window.h
app/particlet/: CMakeLists.txt  ParticleRenderer.cpp  ParticleRenderer.h  SimulationThread.cpp  SimulationThread.h  glwidget.cpp  glwidget.h  main.cpp
app/queueddraw/: CMakeLists.txt  cylinderthread.cpp  cylinderthread.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
app/testh5/: CMakeLists.txt  main.cpp
app/vachellia/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  VachellScene.cpp  VachellScene.h  main.cpp  vachell.qrc
app/vachellia/io/: NodeReader.cpp  NodeReader.h  NodeWriter.cpp  NodeWriter.h
app/vachellia/mimes/: assettree.json  attribpreset.json
app/vachellia/ops/: BoxOps.cpp  BoxOps.h  BranchInstancer.cpp  BranchInstancer.h  CanopyOps.cpp  CanopyOps.h  ConeOps.cpp  ConeOps.h  CylinderOps.cpp  CylinderOps.h  HorizonOps.cpp  HorizonOps.h  InstancerBase.cpp  InstancerBase.h  RenderableOps.cpp  RenderableOps.h  RepeatOps.cpp  RepeatOps.h  SphereOps.cpp  SphereOps.h  TerrainOps.cpp  TerrainOps.h  TransformOps.cpp  TransformOps.h  TrunkOps.cpp  TrunkOps.h  UnionOps.cpp  UnionOps.h  VoxelOps.cpp  VoxelOps.h  allOps.h
app/vachellia/widgets/: AssetPalette.cpp  AssetPalette.h  AttribEditor.cpp  AttribEditor.h  PiecesList.cpp  PiecesList.h  RenderWidget.cpp  RenderWidget.h
app/wiref/: CMakeLists.txt  glprog.cpp  glprog.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp
cmake/: base_config.cmake  boost_config.cmake  clapack_config.cmake  exr_config.cmake  hdf5_config.cmake  qt_config.cmake  zip_config.cmake
core/brdf/: AbstractBrdf.cpp  AbstractBrdf.h  CookTorrance.cpp  CookTorrance.h  Lambert.cpp  Lambert.h  config.cmake
core/bvh/: BVH.cpp  BVH.h  BVHBuildTraverseRule.cpp  BVHBuildTraverseRule.h  BVHBuilder.cpp  BVHBuilder.h  BVHNode.cpp  BVHNode.h  BVHNodeIterator.h  BVHPrimitive.cpp  BVHPrimitive.h  BVHRayTraverseRule.cpp  BVHRayTraverseRule.h  BVHSplit.cpp  BVHSplit.h  Binning.cpp  Binning.h  config.cmake
core/cull/: LevelOfDetailSelect.cpp  LevelOfDetailSelect.h  ViewDependentFunction.cpp  ViewDependentFunction.h  ViewFrustumCull.cpp  ViewFrustumCull.h  ViewFrustumEvent.cpp  ViewFrustumEvent.h  VisibilityState.cpp  VisibilityState.h  VisibleDetail.cpp  VisibleDetail.h  config.cmake
core/gdf/: GeodesicDistance.h  HexahedronDistance.h  HexahedronDistanceBuildRule.h  HexahedronDistanceBuilder.h  config.cmake
core/geom/: ABox.cpp  ABox.h  ATriangleMesh.cpp  ATriangleMesh.h  AdaptableMesh.cpp  AdaptableMesh.h  GeodesicSphere.cpp  GeodesicSphere.h  HistoryMesh.cpp  HistoryMesh.h  V1ATriangleMesh.cpp  V1ATriangleMesh.h  XArrow.cpp  XArrow.h  YCylinder.cpp  YCylinder.h  config.cmake
core/gjk/: ConvexShape.cpp  ConvexShape.h  GjkIntersection.cpp  GjkIntersection.h  config.cmake
core/graph/: AGraph.h  AdaptiveHexagonDistance.h  BaseDistanceField.cpp  BaseDistanceField.h  GraphUtil.cpp  GraphUtil.h  UniformDensity.cpp  UniformDensity.h  config.cmake
core/grd/: GridInCell.h  GridSamples.h  HexahedronDistance.h  IndexGrid.cpp  IndexGrid.h  IndexGridBuildRule.h  IndexGridBuilder.h  IndexGridLookupRule.h  InstanceBound.h  InstanceRecord.cpp  InstanceRecord.h  LocalGrid.h  LocalGridBuildRule.h  LocalGridBuilder.h  LocalGridLookupRule.h  ObjectInstancer.h  TestCell.h  WorldGrid.h  WorldGridBuildRule.h  WorldGridBuilder.h  WorldGridLookupRule.h  config.cmake
core/htf/: HeightField.cpp  HeightField.h  HeightFieldMesher.cpp  HeightFieldMesher.h  config.cmake
core/interface/: BoxRenderer.cpp  BoxRenderer.h  BufferBlock.cpp  BufferBlock.h  BufferParameters.h  DeepBuffer.cpp  DeepBuffer.h  DisplayCamera.cpp  DisplayCamera.h  DisplayImage.cpp  DisplayImage.h  EnvironmentLight.h  EnvironmentMap.h  GlobalFence.cpp  GlobalFence.h  ImageFragment.cpp  ImageFragment.h  IntersectResult.cpp  IntersectResult.h  NoiseRenderer.cpp  NoiseRenderer.h  PixelProjector.cpp  PixelProjector.h  PixelSampler.cpp  PixelSampler.h  RenderBuffer.cpp  RenderBuffer.h  RenderContext.cpp  RenderContext.h  RenderInterface.cpp  RenderInterface.h  RenderableBox.cpp  RenderableBox.h  RenderableCapsule.cpp  RenderableCapsule.h  RenderableCone.cpp  RenderableCone.h  RenderableCoordinateSystem.cpp  RenderableCoordinateSystem.h  RenderableCylinder.cpp  (+18 more)
(+509 files in other folders)
