## Fri Feb 16 23:27:27 CST 2018

cmake_minimum_required (VERSION 2.8)
PROJECT (gorse)
SET (CMAKE_BUILD_TYPE RelWithDebInfo)

INCLUDE (./cmake/base_config.cmake)
INCLUDE (./cmake/boost_config.cmake)
INCLUDE (./cmake/qt_config.cmake)
INCLUDE (./cmake/hdf5_config.cmake)
INCLUDE (./cmake/zip_config.cmake)
INCLUDE (./cmake/exr_config.cmake)
INCLUDE (./cmake/clapack_config.cmake)

INCLUDE (${GORS_DIR}/core/math/config.cmake)
INCLUDE (${GORS_DIR}/core/geom/config.cmake)
INCLUDE (${GORS_DIR}/core/mesh/config.cmake)
INCLUDE (${GORS_DIR}/core/rng/config.cmake)
INCLUDE (${GORS_DIR}/core/bvh/config.cmake)
INCLUDE (${GORS_DIR}/core/gjk/config.cmake)
INCLUDE (${GORS_DIR}/core/sdb/config.cmake)
INCLUDE (${GORS_DIR}/core/cull/config.cmake)
INCLUDE (${GORS_DIR}/core/interface/config.cmake)
INCLUDE (${GORS_DIR}/core/brdf/config.cmake)
INCLUDE (${GORS_DIR}/core/sds/config.cmake)
INCLUDE (${GORS_DIR}/core/graph/config.cmake)
INCLUDE (${GORS_DIR}/core/smp/config.cmake)
INCLUDE (${GORS_DIR}/core/ssdf/config.cmake)
INCLUDE (${GORS_DIR}/core/svf/config.cmake)
INCLUDE (${GORS_DIR}/core/grd/config.cmake)
INCLUDE (${GORS_DIR}/core/gdf/config.cmake)
INCLUDE (${GORS_DIR}/core/htf/config.cmake)
INCLUDE (${GORS_DIR}/core/tbl/config.cmake)
INCLUDE (${GORS_DIR}/gui/qt/config.cmake)
INCLUDE (${GORS_DIR}/gui/qt_base/config.cmake)
INCLUDE (${GORS_DIR}/gui/qt_graph/config.cmake)
INCLUDE (${GORS_DIR}/gui/qt_tree/config.cmake)
INCLUDE (${GORS_DIR}/gui/qt_ogl/config.cmake)
INCLUDE (${GORS_DIR}/gui/qt_interface/config.cmake)
INCLUDE (${GORS_DIR}/gui/qt_lab/config.cmake)
INCLUDE (${GORS_DIR}/gui/ogl/config.cmake)
INCLUDE (${GORS_DIR}/io/h5/config.cmake)
INCLUDE (${GORS_DIR}/io/h5_mesh/config.cmake)
INCLUDE (${GORS_DIR}/io/h5_ssdf/config.cmake)
INCLUDE (${GORS_DIR}/io/h5_grd/config.cmake)
INCLUDE (${GORS_DIR}/io/h5_graph/config.cmake)
INCLUDE (${GORS_DIR}/io/h5_smp/config.cmake)
INCLUDE (${GORS_DIR}/io/ipc/config.cmake)
INCLUDE (${GORS_DIR}/io/jsn/config.cmake)
INCLUDE (${GORS_DIR}/io/img/config.cmake)

ADD_SUBDIRECTORY (app)

